--- a/paper.tex
+++ b/paper.tex
@@ -8,9 +8,9 @@
 
 \title{Effective spreadability of crunchy peanut butter}
 
-\author[1]{Alice Researcher}
-\author[2]{Bob Toaster}
-\author[1]{Charlie Spreadman}
+\author[1]{Alice Researcher\thanks{\href{mailto:alice.researcher@university.edu}{\texttt{alice.researcher@university.edu}}}}
+\author[2]{Bob Toaster\thanks{\href{mailto:btoaster@toasters4life.biz}{\texttt{btoaster@toasters4life.biz}}}}
+\author[1]{Charlie Spreadman\thanks{\href{mailto:spreadman@smoothpbnj.wow}{\texttt{spreadman@smoothpbnj.wow}}}}
 \affil[1]{Caf\'e A}
 \affil[2]{mathe.cafe MA844}
 
